--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+
+<script>
+//MagPi is an autonomous aerial geophysics company providing exploration services to Western and Northern Canada. We specialize in __ surveys for ultra high resolution data.
+</script>
